k8s/rustfs.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustfs
  namespace: app
spec:
  selector: { app: rustfs }
  ports:
    - port: 9000
      name: rustfs
      targetPort: 9000
    - port: 9001
      name: admin-panel
      targetPort: 9001
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rustfs
  namespace: app
spec:
  serviceName: rustfs
  replicas: 1
  selector:
    matchLabels:
      app: rustfs
  template:
    metadata:
      labels:
        app: rustfs
    spec:
      containers:
        - name: rustfs
          image: rustfs/rustfs:latest
          ports:
            - containerPort: 9000
            - containerPort: 9001
          volumeMounts:
          - name: data
            mountPath: /data
          readinessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 10
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
